--- a/i18n/error_strings.json
+++ b/i18n/error_strings.json
@@ -3,246 +3,246 @@
     "msg": "%s URL is invalid: %s. Please specify a complete URL with scheme and host, e.g. https://example.com",
     "file": "config/config.go",
     "line": 104,
-    "col": 27
+    "offset": 3644
   },
   {
     "msg": "%s URL path (%s) cannot end in /: %s. PixivFE does not support this now",
     "file": "config/config.go",
     "line": 107,
-    "col": 27
+    "offset": 3841
   },
   {
     "msg": "Either PIXIVFE_PORT or PIXIVFE_UNIXSOCKET has to be set",
     "file": "config/config.go",
     "line": 154,
-    "col": 21
+    "offset": 5442
   },
   {
     "msg": "PIXIVFE_TOKEN has to be set. Visit https://pixivfe-docs.pages.dev/hosting/hosting-pixivfe for more details",
     "file": "config/config.go",
     "line": 160,
-    "col": 21
+    "offset": 5696
   },
   {
     "msg": "Invalid JSON: %v",
     "file": "core/discovery.go",
     "line": 26,
-    "col": 27
+    "offset": 554
   },
   {
     "msg": "Invalid JSON: %v",
     "file": "core/discovery.go",
     "line": 51,
-    "col": 27
+    "offset": 1116
   },
   {
     "msg": "Invalid JSON: %v",
     "file": "core/index.go",
     "line": 64,
-    "col": 27
+    "offset": 1526
   },
   {
     "msg": "Pixivision: Page not found",
     "file": "core/pixivision.go",
     "line": 41,
-    "col": 26
+    "offset": 998
   },
   {
     "msg": "We couldn't find the page you're looking for",
     "file": "core/pixivision.go",
     "line": 130,
-    "col": 31
+    "offset": 2795
   },
   {
     "msg": "All tokens (%d) are timed out, resetting all tokens to their initial good state.\nConsider providing additional tokens in PIXIVFE_TOKEN or reviewing API request level backoff configuration.\nPlease refer the following documentation for additional information:\n- https://pixivfe-docs.pages.dev/hosting/obtaining-pixivfe-token/\n- https://pixivfe-docs.pages.dev/hosting/environment-variables/#exponential-backoff-configuration",
     "file": "core/requests.go",
     "line": 53,
-    "col": 5
+    "offset": 1545
   },
   {
     "msg": "HTTP status code: %d",
     "file": "core/requests.go",
     "line": 106,
-    "col": 25
+    "offset": 2996
   },
   {
     "msg": "Max retries reached. Last error: %v",
     "file": "core/requests.go",
     "line": 120,
-    "col": 26
+    "offset": 3274
   },
   {
     "msg": "Invalid JSON: %v",
     "file": "core/requests.go",
     "line": 149,
-    "col": 26
+    "offset": 4274
   },
   {
     "msg": "Incompatible request body",
     "file": "core/requests.go",
     "line": 155,
-    "col": 25
+    "offset": 4394
   },
   {
     "msg": "userToken is required for POST requests",
     "file": "core/requests.go",
     "line": 168,
-    "col": 21
+    "offset": 4781
   },
   {
     "msg": "failed to proxy request: %w",
     "file": "core/requests.go",
     "line": 199,
-    "col": 22
+    "offset": 5783
   },
   {
     "msg": "failed to copy response body: %w",
     "file": "core/requests.go",
     "line": 215,
-    "col": 22
+    "offset": 6135
   },
   {
     "msg": "Invalid work category: %#v. Only \"%s\", \"%s\", \"%s\", \"%s\", \"%s\" and \"%s\" are available",
     "file": "core/user.go",
     "line": 34,
-    "col": 22
+    "offset": 845
   },
   {
     "msg": "No page available.",
     "file": "core/user.go",
     "line": 238,
-    "col": 29
+    "offset": 5570
   },
   {
     "msg": "when running sass: %w",
     "file": "main.go",
     "line": 89,
-    "col": 25
+    "offset": 2580
   },
   {
     "msg": "failed to create response save directory: %w",
     "file": "server/audit/audit_init.go",
     "line": 29,
-    "col": 22
+    "offset": 712
   },
   {
     "msg": "failed to write response body to file %s: %w",
     "file": "server/audit/audit_log.go",
     "line": 81,
-    "col": 26
+    "offset": 2961
   },
   {
     "msg": "Route not found",
     "file": "server/middleware/router.go",
     "line": 136,
-    "col": 37
+    "offset": 7058
   },
   {
     "msg": "No ID provided.",
     "file": "server/routes/actions.go",
     "line": 23,
-    "col": 21
+    "offset": 517
   },
   {
     "msg": "No ID provided.",
     "file": "server/routes/actions.go",
     "line": 51,
-    "col": 21
+    "offset": 1142
   },
   {
     "msg": "No ID provided.",
     "file": "server/routes/actions.go",
     "line": 75,
-    "col": 21
+    "offset": 1733
   },
   {
     "msg": "Invalid ID: %s",
     "file": "server/routes/artwork.go",
     "line": 15,
-    "col": 22
+    "offset": 297
   },
   {
     "msg": "Invalid ID: %s",
     "file": "server/routes/artworkMulti.go",
     "line": 30,
-    "col": 29
+    "offset": 746
   },
   {
     "msg": "Invalid ID: %s",
     "file": "server/routes/mangaseries.go",
     "line": 17,
-    "col": 22
+    "offset": 310
   },
   {
     "msg": "Invalid Series ID: %s",
     "file": "server/routes/mangaseries.go",
     "line": 22,
-    "col": 22
+    "offset": 442
   },
   {
     "msg": "Invalid Page",
     "file": "server/routes/mangaseries.go",
     "line": 29,
-    "col": 22
+    "offset": 677
   },
   {
     "msg": "Invalid Page",
     "file": "server/routes/mangaseries.go",
     "line": 60,
-    "col": 22
+    "offset": 1598
   },
   {
     "msg": "Invalid ID: %s",
     "file": "server/routes/novel.go",
     "line": 17,
-    "col": 22
+    "offset": 356
   },
   {
     "msg": "Invalid ID: %s",
     "file": "server/routes/novelseries.go",
     "line": 17,
-    "col": 22
+    "offset": 310
   },
   {
     "msg": "Invalid Page Number: %d",
     "file": "server/routes/novelseries.go",
     "line": 32,
-    "col": 22
+    "offset": 673
   },
   {
     "msg": "Cannot authorize with supplied token.",
     "file": "server/routes/settings.go",
     "line": 26,
-    "col": 22
+    "offset": 670
   },
   {
     "msg": "Cannot authorize with supplied token.",
     "file": "server/routes/settings.go",
     "line": 37,
-    "col": 22
+    "offset": 972
   },
   {
     "msg": "Cannot authorize with supplied token.",
     "file": "server/routes/settings.go",
     "line": 44,
-    "col": 22
+    "offset": 1124
   },
   {
     "msg": "You submitted an empty/invalid form.",
     "file": "server/routes/settings.go",
     "line": 53,
-    "col": 20
+    "offset": 1327
   },
   {
     "msg": "Invalid Cookie Name: %s",
     "file": "server/routes/settings.go",
     "line": 129,
-    "col": 21
+    "offset": 3363
   },
   {
     "msg": "No such setting is available.",
     "file": "server/routes/settings.go",
     "line": 191,
-    "col": 20
+    "offset": 4784
   }
 ]
