--- a/i18n/code_strings.json
+++ b/i18n/code_strings.json
@@ -24,6 +24,42 @@
     "offset": 5696
   },
   {
+    "msg": "Safe",
+    "file": "core/artwork.go",
+    "line": 35,
+    "offset": 520
+  },
+  {
+    "msg": "R18",
+    "file": "core/artwork.go",
+    "line": 37,
+    "offset": 556
+  },
+  {
+    "msg": "R18G",
+    "file": "core/artwork.go",
+    "line": 39,
+    "offset": 592
+  },
+  {
+    "msg": "Unrated",
+    "file": "core/artwork.go",
+    "line": 62,
+    "offset": 993
+  },
+  {
+    "msg": "Not AI",
+    "file": "core/artwork.go",
+    "line": 64,
+    "offset": 1034
+  },
+  {
+    "msg": "AI",
+    "file": "core/artwork.go",
+    "line": 66,
+    "offset": 1071
+  },
+  {
     "msg": "Invalid JSON: %v",
     "file": "core/discovery.go",
     "line": 26,
@@ -60,46 +96,58 @@
     "offset": 1545
   },
   {
+    "msg": "failed to make request: %w",
+    "file": "core/requests.go",
+    "line": 76,
+    "offset": 2349
+  },
+  {
+    "msg": "Received nil response after request: %w",
+    "file": "core/requests.go",
+    "line": 80,
+    "offset": 2465
+  },
+  {
     "msg": "HTTP status code: %d",
     "file": "core/requests.go",
-    "line": 106,
-    "offset": 2996
+    "line": 111,
+    "offset": 3200
   },
   {
     "msg": "Max retries reached. Last error: %v",
     "file": "core/requests.go",
-    "line": 120,
-    "offset": 3274
+    "line": 125,
+    "offset": 3478
   },
   {
     "msg": "Invalid JSON: %v",
     "file": "core/requests.go",
-    "line": 149,
-    "offset": 4274
+    "line": 154,
+    "offset": 4478
   },
   {
     "msg": "Incompatible request body",
     "file": "core/requests.go",
-    "line": 155,
-    "offset": 4394
+    "line": 160,
+    "offset": 4598
   },
   {
     "msg": "userToken is required for POST requests",
     "file": "core/requests.go",
-    "line": 168,
-    "offset": 4781
+    "line": 173,
+    "offset": 4985
   },
   {
     "msg": "failed to proxy request: %w",
     "file": "core/requests.go",
-    "line": 199,
-    "offset": 5783
+    "line": 204,
+    "offset": 5987
   },
   {
     "msg": "failed to copy response body: %w",
     "file": "core/requests.go",
-    "line": 215,
-    "offset": 6135
+    "line": 220,
+    "offset": 6339
   },
   {
     "msg": "Invalid work category: %#v. Only \"%s\", \"%s\", \"%s\", \"%s\", \"%s\" and \"%s\" are available",
@@ -110,8 +158,8 @@
   {
     "msg": "No page available.",
     "file": "core/user.go",
-    "line": 238,
-    "offset": 5570
+    "line": 247,
+    "offset": 5916
   },
   {
     "msg": "when running sass: %w",
@@ -132,10 +180,16 @@
     "offset": 2961
   },
   {
+    "msg": "Failed to redirect to %s",
+    "file": "server/middleware/router.go",
+    "line": 133,
+    "offset": 6802
+  },
+  {
     "msg": "Route not found",
     "file": "server/middleware/router.go",
-    "line": 136,
-    "offset": 7058
+    "line": 147,
+    "offset": 7504
   },
   {
     "msg": "No ID provided.",
@@ -188,8 +242,8 @@
   {
     "msg": "Invalid Page",
     "file": "server/routes/mangaseries.go",
-    "line": 60,
-    "offset": 1598
+    "line": 55,
+    "offset": 1514
   },
   {
     "msg": "Invalid ID: %s",
@@ -244,5 +298,113 @@
     "file": "server/routes/settings.go",
     "line": 191,
     "offset": 4784
+  },
+  {
+    "msg": "Romance",
+    "file": "server/template/templateFunctions.go",
+    "line": 205,
+    "offset": 5036
+  },
+  {
+    "msg": "Isekai fantasy",
+    "file": "server/template/templateFunctions.go",
+    "line": 207,
+    "offset": 5075
+  },
+  {
+    "msg": "Contemporary fantasy",
+    "file": "server/template/templateFunctions.go",
+    "line": 209,
+    "offset": 5121
+  },
+  {
+    "msg": "Mystery",
+    "file": "server/template/templateFunctions.go",
+    "line": 211,
+    "offset": 5173
+  },
+  {
+    "msg": "Horror",
+    "file": "server/template/templateFunctions.go",
+    "line": 213,
+    "offset": 5212
+  },
+  {
+    "msg": "Sci-fi",
+    "file": "server/template/templateFunctions.go",
+    "line": 215,
+    "offset": 5250
+  },
+  {
+    "msg": "Literature",
+    "file": "server/template/templateFunctions.go",
+    "line": 217,
+    "offset": 5288
+  },
+  {
+    "msg": "Drama",
+    "file": "server/template/templateFunctions.go",
+    "line": 219,
+    "offset": 5330
+  },
+  {
+    "msg": "Historical pieces",
+    "file": "server/template/templateFunctions.go",
+    "line": 221,
+    "offset": 5367
+  },
+  {
+    "msg": "BL (yaoi)",
+    "file": "server/template/templateFunctions.go",
+    "line": 223,
+    "offset": 5417
+  },
+  {
+    "msg": "Yuri",
+    "file": "server/template/templateFunctions.go",
+    "line": 225,
+    "offset": 5459
+  },
+  {
+    "msg": "For kids",
+    "file": "server/template/templateFunctions.go",
+    "line": 227,
+    "offset": 5496
+  },
+  {
+    "msg": "Poetry",
+    "file": "server/template/templateFunctions.go",
+    "line": 229,
+    "offset": 5537
+  },
+  {
+    "msg": "Essays/non-fiction",
+    "file": "server/template/templateFunctions.go",
+    "line": 231,
+    "offset": 5576
+  },
+  {
+    "msg": "Screenplays/scripts",
+    "file": "server/template/templateFunctions.go",
+    "line": 233,
+    "offset": 5627
+  },
+  {
+    "msg": "Reviews/opinion pieces",
+    "file": "server/template/templateFunctions.go",
+    "line": 235,
+    "offset": 5679
+  },
+  {
+    "msg": "Other",
+    "file": "server/template/templateFunctions.go",
+    "line": 237,
+    "offset": 5734
+  },
+  {
+    "msg": "(Unknown Genre: %s)",
+    "file": "server/template/templateFunctions.go",
+    "line": 240,
+    "offset": 5768
   }
 ]
