--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -1,6 +1,11 @@
-# Notes related to ./i18n/crawler
+# Localization
 
-## Primer on html and jet's treatment of templates
+## Rules
+
+- please don't i18n server logs, for now
+- 
+
+## ./i18n/crawler -- Primer on html and jet's treatment of templates
 
 ```
 <a>abc {{.Hi}}</a>
@@ -15,7 +20,7 @@ So, jet doesn't care about HTML.
 
 And we have to care about `{* *}` comments.
 
-## Coalesce inline tags
+## ./i18n/crawler -- Coalesce inline tags
 
 Example: in below, the `<a>` tag should be part of the string.
 
