--- a/i18n/locale/en/code.json
+++ b/i18n/locale/en/code.json
@@ -7,6 +7,12 @@
   "core/index.go:7heLIvyBB2M": "Invalid JSON: %v",
   "core/pixivision.go:9BZUSeQrfiw": "We couldn't find the page you're looking for",
   "core/pixivision.go:NSzoBZ3-Fgw": "Pixivision: Page not found",
+  "core/ranking.go:D87gDB11y4g": "All attempts failed. Last error: %v",
+  "core/ranking.go:JtGRRZN09Yk": "API_GET error: %v",
+  "core/ranking.go:TCO9Xvg8ioM": "JSON unmarshalling error on attempt %d: %v",
+  "core/ranking.go:Xy1LpykXW4E": "Retrying in %v",
+  "core/ranking.go:_YcW1wsLOAg": "JSON unmarshalling successful on attempt %d",
+  "core/ranking.go:sk-7WI2RS-Q": "Attempt %d of %d",
   "core/requests.go:0Q07bJLKfvU": "Received nil response after request: %w",
   "core/requests.go:0hOvqlK-HwY": "HTTP status code: %d",
   "core/requests.go:7heLIvyBB2M": "Invalid JSON: %v",
@@ -18,7 +24,6 @@
   "core/requests.go:o7gE7trSD7c": "Max retries reached. Last error: %v",
   "core/requests.go:y3v5nQwdU0s": "All tokens (%d) are timed out, resetting all tokens to their initial good state.\nConsider providing additional tokens in PIXIVFE_TOKEN or reviewing API request level backoff configuration.\nPlease refer the following documentation for additional information:\n- https://pixivfe-docs.pages.dev/hosting/obtaining-pixivfe-token/\n- https://pixivfe-docs.pages.dev/hosting/environment-variables/#exponential-backoff-configuration",
   "core/user.go:1itpJBE-3VI": "Invalid page number.",
-  "core/user.go:Ks_4fUCl_r8": "No items available.",
   "core/user.go:T3RwaHcnsYQ": "Invalid work category: %#v. Only \"%s\", \"%s\", \"%s\", \"%s\", \"%s\" and \"%s\" are available",
   "server/audit/audit_init.go:k5XgFtfJlBA": "failed to create response save directory: %w",
   "server/audit/audit_log.go:PoqY_pYG5lo": "failed to write response body to file %s: %w",
