--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -1,9 +1,12 @@
 # Localization
 
-## Rules
+Notes on i18n/
 
-- please don't i18n server logs, for now
-- 
+## Todo
+
+- [ ] Add env PIXIVFE_SERVER_LOCALE and set `i18n.GlobalLocale` to that on startup
+- [ ] Rewrite jet template on load to use translated strings
+- [ ] Setup Crowdin
 
 ## ./i18n/crawler -- Primer on html and jet's treatment of templates
 
@@ -28,6 +31,4 @@ Example: in below, the `<a>` tag should be part of the string.
 Log in with your Pixiv account's cookie to access features above. To learn how to obtain your cookie, please see <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
 ```
 
-Tags to consider inline:
-
-- `a`
+Tags to consider as inline: `a`
