--- a/i18n/locale/en/code.json
+++ b/i18n/locale/en/code.json
@@ -3,6 +3,12 @@
   "config/config.go:RYarEGsqd5g": "%s URL is invalid: %s. Please specify a complete URL with scheme and host, e.g. https://example.com",
   "config/config.go:e77Bmjoumik": "Either PIXIVFE_PORT or PIXIVFE_UNIXSOCKET has to be set",
   "config/config.go:ndbwr45EUKs": "PIXIVFE_TOKEN has to be set. Visit https://pixivfe-docs.pages.dev/hosting/hosting-pixivfe for more details",
+  "core/artwork.go:24WQC-nnum0": "Unrated",
+  "core/artwork.go:CSpbSZdxsRM": "Not AI",
+  "core/artwork.go:P-jUjJKAI7E": "R18",
+  "core/artwork.go:R20Dy5iCS58": "AI",
+  "core/artwork.go:tLDBgUWw9-g": "Safe",
+  "core/artwork.go:u8tMG9xlO8s": "R18G",
   "core/discovery.go:7heLIvyBB2M": "Invalid JSON: %v",
   "core/index.go:7heLIvyBB2M": "Invalid JSON: %v",
   "core/pixivision.go:9BZUSeQrfiw": "We couldn't find the page you're looking for",
