--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -6,7 +6,13 @@ Notes on i18n/
 
 - [ ] Add env PIXIVFE_SERVER_LOCALE and set `i18n.GlobalLocale` to that on startup
 - [ ] Rewrite jet template on load to use translated strings
-- [ ] Setup Crowdin
+- Setup Crowdin
+  - [x] manual upload and download
+  - [ ] automatic upload and download
+
+## Crowdin tips
+
+Add new languages to translate in Settings > Languages.
 
 ## ./i18n/crawler -- Primer on html and jet's treatment of templates
 
