Document Crowdin CLI usage

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -10,7 +10,31 @@ Notes on i18n/
   - [x] manual upload and download
   - [ ] automatic upload and download
 
-## Crowdin tips
+## Crowdin CLI usage
+
+Install the CLI: [See official instructions](https://crowdin.github.io/crowdin-cli/installation)
+
+Remember to check `crowdin -V`. Should be `4.2.0` or later.
+
+First, setup API token:
+
+1. Go to https://crowdin.com/settings#api-key
+2. Click the "New Token" button
+3. Set permission: Projects >
+  - Projects (List, Get, Create, Edit) -- Read only
+  - Source files & strings (List, Get, Create, Edit) -- Read and write
+  - Translations (List, Get, Create, Edit) -- Read and write
+4. Copy the new token and save it somewhere
+
+Then, try it out.
+
+```shell
+export CROWDIN_PERSONAL_TOKEN=token_here # put this somewhere in your shell config
+crowdin upload
+crowdin download
+```
+
+## Crowdin Web UI usage
 
 Add new languages to translate in Settings > Languages.
 
