--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -6,9 +6,10 @@ Notes on i18n/
 
 - [ ] Add env PIXIVFE_SERVER_LOCALE and set `i18n.GlobalLocale` to that on startup
 - [ ] Rewrite jet template on load to use translated strings
+- [ ] Check if any jet template strings are ignored (false negative)
 - Setup Crowdin
   - [x] manual upload and download
-  - [ ] automatic upload and download
+  - [x] automatic upload and download
 
 ## Crowdin CLI usage
 
