i18n: more docker doc

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -37,7 +37,11 @@ crowdin download
 
 ## Crowdin Docker usage
 
+These instructions assume `CROWDIN_PERSONAL_TOKEN` is available as an environment variable.
+
 ### Step 1: set up container (with sources from local git repo)
+
+Create an interactive Docker container using the `crowdin/cli:latest` image, and mount `./i18n/locale/en` from the local Git repository to `/usr/crowdin-project/i18n/locale/en` inside the container.
 
 ```sh
 docker run -it --rm --name crowdin-cli \
@@ -47,6 +51,8 @@ docker run -it --rm --name crowdin-cli \
 ```
 
 ### Step 2: init crowdin.yml
+
+Initialise `crowdin.yml`; we don't need explicitly set `--quiet` as an option as we define all required configuration in `crowdin init`.
 
 ```sh
 crowdin init \
