Add cookie: Locale

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -1,10 +1,11 @@
 # Localization
 
-Notes on i18n/
+Important notice: please don't translate server logs with `i18n.*()`. It uses the request locale, not the server one.
 
 ## Todo
 
-- [ ] Add env PIXIVFE_SERVER_LOCALE and set `i18n.GlobalLocale` to that on startup
+- [x] Add cookie: Locale
+- [ ] Add option to set locale in settings page
 - [ ] Rewrite jet template on load to use translated strings
 - [ ] Check if any jet template strings are ignored (false negative)
 - Setup Crowdin
