[i18n] fix jet template rewriter

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -2,11 +2,18 @@
 
 Important notice: please don't translate server logs with `i18n.*()`. It uses the request locale, not the server one.
 
+## Quick links to Crowdin
+
+- [Project Dashboard](https://crowdin.com/project/pixivfe)
+- [Project Settings](https://crowdin.com/project/pixivfe/settings)
+- [Translation Editor](https://crowdin.com/editor/pixivfe)
+- [API Key](https://crowdin.com/settings#api-key)
+
 ## Todo
 
 - [x] Add cookie: Locale
-- [ ] Add option to set locale in settings page
-- [ ] Rewrite jet template on load to use translated strings
+- [x] Rewrite jet template on load to use translated strings
+- [ ] Add dedicated option to set locale in settings page
 - [ ] Check if any jet template strings are ignored (false negative)
 - Setup Crowdin
   - [x] manual upload and download
