--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -38,7 +38,7 @@ First, setup API token:
 Then, try it out.
 
 ```shell
-export CROWDIN_PERSONAL_TOKEN=token_here # put this somewhere in your shell config
+export CROWDIN_PERSONAL_TOKEN=token_here # put this somewhere in your shell config, or the `.env` file inside this repo, which will be used by ./build.sh
 crowdin upload
 crowdin download
 ```
