docs: update i18n docker instructions

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -54,7 +54,7 @@ Create an interactive Docker container using the `crowdin/cli:latest` image, and
 ```sh
 docker run -it --rm --name crowdin-cli \
   -e CROWDIN_PERSONAL_TOKEN=${CROWDIN_PERSONAL_TOKEN} \
-  -v "./i18n/locale/en:/usr/crowdin-project/i18n/locale/en" \
+  -v "./i18n/locale:/usr/crowdin-project/i18n/locale" \
   crowdin/cli:latest
 ```
 
@@ -73,14 +73,14 @@ crowdin init \
     --verbose
 ```
 
-### Step 3: upload translations from container to PixivFE crowdin project
+### Step 3: upload translations from local git repo to PixivFE crowdin project
 
 ```sh
 crowdin upload \
   --verbose
 ```
 
-### Step 4: download translations from PixivFE crowdin project to container
+### Step 4: download translations from PixivFE crowdin project to local git repo
 
 ```sh
 crowdin download \
