docs: rm separate crowdin init step

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -55,32 +55,18 @@ Create an interactive Docker container using the `crowdin/cli:latest` image, and
 docker run -it --rm --name crowdin-cli \
   -e CROWDIN_PERSONAL_TOKEN=${CROWDIN_PERSONAL_TOKEN} \
   -v "./i18n/locale:/usr/crowdin-project/i18n/locale" \
+  -v "./crowdin.yml:/usr/crowdin-project/crowdin.yml" \
   crowdin/cli:latest
 ```
 
-### Step 2: init crowdin.yml
-
-Initialise `crowdin.yml`; we don't need explicitly set `--quiet` as an option as we define all required configuration in `crowdin init`.
-
-```sh
-crowdin init \
-    --token "${CROWDIN_PERSONAL_TOKEN}" \
-    --project-id "724667" \
-    --base-path "." \
-    --base-url "https://api.crowdin.com" \
-    --source "/i18n/locale/en/*.json" \
-    --translation "/i18n/locale/%locale%/%original_file_name%" \
-    --verbose
-```
-
-### Step 3: upload translations from local git repo to PixivFE crowdin project
+### Step 2: upload translations from local git repo to PixivFE crowdin project
 
 ```sh
 crowdin upload \
   --verbose
 ```
 
-### Step 4: download translations from PixivFE crowdin project to local git repo
+### Step 3: download translations from PixivFE crowdin project to local git repo
 
 ```sh
 crowdin download \
